0030345: Mesh, BRepMesh_CurveTessellator - GCPnts_TangentialDeflection throws Standard_ConstructionError

Now the algorithm GCPnts_TangentialDeflection is initialized by appropriate parameters.